--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-
+<button data-paperform-id="uclacello15" data-popup-button="1">Click me to show the form!</button><script>(function() { var script = document.createElement('script'); script.src = "https://paperform.co/__embed.min.js";document.body.appendChild(script); })()</script>
